# soroban_reverse_auction

./: .gitignore  README.md  TODO  _headers  astro.config.mjs  netlify.toml  package-lock.json  package.json  readme.md
.github/workflows/: deploy.yml
.soroban/: auction_id
frontend/: astro.config.mjs  package.json
frontend/.soroban/identity/: deployer.toml
frontend/src/components/: Card.astro  ReverseAuction.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
public/: _headers
soroban_auction/: Cargo.toml
soroban_auction/src/: lib.bak  lib.rs  test.rs  types.bak  types.rs
soroban_auction/test_snapshots/test/: test_setup.1.json
src/components/: ConnectFreighter.astro  ReverseAuction.astro
src/layouts/: Layout.astro
